<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="buu.informatics.s59160134.carparklab.InforFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/infor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/infor_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:srcCompat="@android:drawable/sym_def_app_icon"/>
        <TextView
                android:text="@string/infor_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infor_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"/>
        <TextView
                android:text="@string/idStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

