<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="buu.informatics.s59160134.carparkapp.CarParkFragment">
    <data>
        <variable name="car" type="buu.informatics.s59160134.carparkapp.Car"/>
        <variable name="cars" type="buu.informatics.s59160134.carparkapp.Car[]"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@{cars[0].empty?@string/empty_button:``+ cars[0].carId}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/room_button1" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/room_button2"
                app:layout_constraintBaseline_toBaselineOf="@+id/room_button2"
                android:textSize="@dimen/box_text_size" style="@style/whiteBox"
                android:background="@{cars[0].empty?@android:color/white:@color/colorAccent}"
                android:textColor="@{cars[0].empty?@color/colorDark:@android:color/white}"/>
        <Button
                android:text="@{cars[1].empty?@string/empty_button:``+cars[1].carId}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/room_button2"
                app:layout_constraintStart_toEndOf="@+id/room_button1" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/room_button3"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/carpark_text"
                style="@style/whiteBox"
                android:background="@{cars[1].empty?@android:color/white:@color/colorAccent}"
                android:textColor="@{cars[1].empty?@color/colorDark:@android:color/white}"/>
        <Button
                android:text="@{cars[2].empty?@string/empty_button:``+cars[2].carId}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/room_button3"
                app:layout_constraintStart_toEndOf="@+id/room_button2" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/room_button2"
                style="@style/whiteBox"
                android:background="@{cars[2].empty?@android:color/white:@color/colorAccent}"
                android:textColor="@{cars[2].empty?@color/colorDark:@android:color/white}"/>
        <TextView
                android:text="@string/carpark_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/carpark_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/roboto"
                android:textSize="24sp"
                android:textStyle="bold"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/room_button2"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/detail_carPark" tools:visibility="gone">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" tools:visibility="visible">
                <TextView
                        android:text="@{`Room ` + car.id}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/roomID_text"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:text="@={car.name}"
                        android:id="@+id/editText2" android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/roomID_text" android:hint="@string/Name_text"
                        android:textAlignment="center"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:text="@={car.carId}"
                        android:id="@+id/editText5" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:hint="@string/CarID_text"
                        android:textAlignment="center"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:text="@={car.brand}"
                        android:id="@+id/editText6" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText5" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
                        android:hint="@string/Brand_text" android:textAlignment="center"/>
                <Button
                        android:text="@string/Delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/del_button"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/save_button" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText6"/>
                <Button
                        android:text="@string/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/save_button" app:layout_constraintStart_toEndOf="@+id/del_button"
                        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBaseline_toBaselineOf="@+id/del_button" style="@style/GreenBox"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

