<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="buu.informatics.s59160134.carparklab.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/cardView">


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <Button
                        android:text="@string/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_button" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="0.498"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/username_input" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/login_text" android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:hint="Username"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/password_input" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/username_input" android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:hint="Password"/>
                <TextView
                        android:text="@string/login_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_text" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        android:textSize="24sp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                        android:textStyle="bold"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
                android:text="@string/errorlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/error_text" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView" android:textColor="@color/colorAccent"
                tools:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

